[package]
name = "actor-test"
version = "0.1.0"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.actix]
version = "0.9.0"
[dependencies.actix-web]
version = "2.0.0"
[dependencies.tokio]
version = "0.2.13"
[dependencies.serde]
version = "1.0.104"
[dependencies.serde_derive]
version = "1.0.104"
[dependencies.actix-rt]
version = "1.0.0"
